# sockets-rust

./: '  Cargo.toml  README.md
src/: auth.rs  base64.rs  client.rs  error.rs  lib.rs  message.rs  protocol.rs  server.rs  tcp.rs  tls.rs
