[package]
name = "sockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
hyper = { version = "0.14.26", features = ["full"] }
hyper-tungstenite = "0.9.0"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = "0.19.0"
tokio-util = "0.7.8"
url = "2.3.1"
